Fix: Remove PORT from env vars (Cloud Run sets it automatically)

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -76,14 +76,12 @@ steps:
       - '512Mi'
       - '--cpu'
       - '1'
-      - '--port'
-      - '3001'
       - '--add-cloudsql-instances'
       - 'sadaai-dashboard:${_REGION}:sadaai-db'
       - '--update-secrets'
       - 'DATABASE_URL=DATABASE_URL:latest,JWT_SECRET=JWT_SECRET:latest,JWT_REFRESH_SECRET=JWT_REFRESH_SECRET:latest,REDIS_HOST=REDIS_HOST:latest,NEXTAUTH_SECRET=NEXTAUTH_SECRET:latest'
       - '--update-env-vars'
-      - 'NODE_ENV=production,PORT=3001,FRONTEND_URL=https://frontend-placeholder.run.app'
+      - 'NODE_ENV=production,FRONTEND_URL=https://frontend-placeholder.run.app'
     waitFor: ['push-backend']
 
   # Step 6: Deploy Frontend to Cloud Run
@@ -109,8 +107,6 @@ steps:
       - '512Mi'
       - '--cpu'
       - '1'
-      - '--port'
-      - '3000'
       - '--update-env-vars'
       - 'NODE_ENV=production,NEXT_PUBLIC_API_URL=https://backend-placeholder.run.app'
     waitFor: ['push-frontend']
